Updated hero spacing and left-nav UI. Resolves #106. (#149)

--- a/src/components/header/header.module.css
+++ b/src/components/header/header.module.css
@@ -48,6 +48,7 @@
     align-items: flex-start;
     background-color: var(--shade-light);
     flex-direction: column;
+    font-weight: 400;
     height: calc(100% - 60px);
     left: 0;
     margin: 0;
@@ -161,7 +162,7 @@
     }
 
     .header li:not(:first-of-type) {
-        margin: 0 0 0 24px;
+        margin: 0 0 0 36px;
     }
 
     /* Link */
